# DiscretePortfolioOptimization

./: .gitignore  .pre-commit-config.yaml  404.html  DPO_UserInterface.py  README.md  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
UI/: DPO_UserInterface.py
docs/: index.md  metropolis.md  portfolio.md  yfinance_download.md
metropolis/: index.html
portfolio/: index.html
search/: search_index.json
src/DiscretePortfolioOptimization/: __init__.py  metropolis.py  portfolio.py  yfinance_download.py
src/discrete_portfolio_optimization/: __init__.py  metropolis.py  portfolio.py  yfinance_download.py
tests/: test_01_yf_wrapper.py  test_02_portfolio.py  test_03_metropolis.py  test_UI.py
tests/data/: 20240825_close.csv
yfinance_download/: index.html
