[project]
name = "discrete-portfolio-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.43",
    "pandas>=2.2.2",
    "numpy>=2.1.0",
    "tqdm>=4.66.5",
    "plotly>=5.23.0",
    "marimo>=0.8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-dependency>=0.6.0",
]
