[project]
name = "discrete-portfolio-optimization"
version = "0.3.2"
description =  "A Python package for discrete portfolio optimization."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.43",
    "pandas>=2.2.2",
    "numpy>=2.1.0",
    "tqdm>=4.66.5",
    "plotly>=5.23.0",
    "marimo>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-dependency>=0.6.0",
    "ruff>=0.6.4",
    "mypy>=1.11.2",
    "pandas-stubs>=2.2.2.240807",
    "types-tqdm>=4.66.0.20240417",
    "google-generativeai>=0.8.4",
]
